fix: 修复更新队伍的是出现的bug feat: 加入队伍功能